@@ -1,5 +1,5 @@
 /*
- * $Id: libbk_internal.h,v 1.31 2002/11/11 22:53:58 jtt Exp $
+ * $Id: libbk_internal.h,v 1.32 2002/11/18 19:17:02 lindauer Exp $
  *
  * ++Copyright LIBBK++
  *
@@ -74,6 +74,7 @@ struct bk_ioh
   int			ioh_throttle_cnt;	///< How many people want to block reads.
   void		       *ioh_readallowedevent;	///< Event to schedule user queue drain after readallowed
   int			ioh_compress_level;	///< The level to use for compression
+  int			ioh_errno;		///< Last errno for this ioh
   bk_flags		ioh_extflags;		///< Flags--see libbk.h
   bk_flags		ioh_intflags;		///< Flags
 #define IOH_FLAGS_SHUTDOWN_INPUT	0x01	///< Input shut down
