@@ -1,3 +1,7 @@
+2002-11-18  Brian Lindauer  <lindauer@malkmus.sysdetect.com>
+
+	* lib/b_ioh.c (bk_ioh_last_error): Get the last bkio errno.
+
 2002-11-14  Brian Lindauer  <lindauer@malkmus.sysdetect.com>
 
 	* lib/b_fileutils.c (bk_fileutils_is_true_pipe): Added function to
